Changes to email list and message, fixed up some issues with attachment items, added human-readable file sizes, and changes to api endpoints

--- a/src/components/AttachmentItem.scss
+++ b/src/components/AttachmentItem.scss
@@ -29,7 +29,7 @@
 .attachment-item .icon {
   color: root.$secondary;
 
-  font-size: 28px;
+  height: 28px;
 }
 
 .attachment-item .name {
